# dotembed

./: CMakeLists.txt  README.md
managed/ManagedLibA/: Lib.cs
managed/ManagedLibB/: Lib.cs  ManagedLibB.csproj
managed/ManagedLibC/: Lib.cs  ManagedLibC.csproj
src/: dotembed.cpp  dotembed.h  main.cpp
